Fixed some spacing issues and such, made profile work

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -34,7 +34,7 @@ body {
   width: 14.125rem;
   height: auto;
   position: relative;
-  float: left;
+  left: -8.25rem;
   z-index: 1;
 }
 
